# telegram-anonymous-chat-bot

./: .editorconfig  .env.dist  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/: FUNDING.yml
bot/: __main__.py  config.py  ui_commands.py
bot/core/: factory.py  runner.py
bot/core/factory/: dispatcher.py  setup.py
bot/core/runtime/: polling.py
bot/enums/: __init__.py  callback.py  locale.py  profile.py  status.py  throttle.py  top.py
bot/handlers/: __init__.py  callbacks.py  chatting.py  menu.py  next.py  search.py  stop.py
bot/handlers/callbacks/: __init__.py  factories.py  process_data.py
bot/handlers/common/: __init__.py  chan.py  dialog.py  dice.py  language.py  menu.py  profile.py  start.py  top.py
bot/handlers/messages/: __init__.py  chatting.py
bot/keyboards/: __init__.py  inline.py
bot/keyboards/inline/: __init__.py  factories.py  factory.py  inline.py  main.py
bot/keyboards/reply/: __init__.py  base.py  reply.py
bot/middlewares/: __init__.py
bot/middlewares/inner/: __init__.py  next_companion.py  search_companion.py  stop_companion.py  throttling.py
bot/middlewares/outer/: __init__.py  i18n.py  throttling.py  user.py
bot/services/database/: uow.py
bot/services/database/models/: user.py
bot/services/database/repositories/: user.py
bot/utils/: __init__.py  commands.py  user_matching.py
locales/en/: messages.ftl
locales/ja/: messages.ftl
locales/uk/: messages.ftl
migrations/versions/: 001_create_table.py
systemd/: telegram-bot.service
