[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "telegram-anonymous-chat-bot"
version = "0.3.1"
description = "Anonymous ChatBot"
authors = ["Th3Kanashii <Th3Kanashii@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiogram = "^3.4.1"
aiogram-i18n = "^1.3.4"
alembic = "^1.13.1"
asyncpg = "^0.29.0"
fluent-runtime = "^0.4.0"
pydantic-settings = "^2.2.1"
sqlalchemy = "^2.0.28"
cachetools = "^5.3.3"
betterlogging = "^1.0.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.3.2"
black = "^24.2.0"
mypy = "^1.9.0"
pre-commit = "^3.6.2"
libcst = "^1.0.1"

[tool.black]
line_length = 99
exclude = "\\.?venv|\\.cache"

[tool.ruff]
target-version = "py38"
line-length = 99
select = [
    "C",
    "DTZ",
    "E",
    "F",
    "I",
    "ISC",
    "N",
    "PLC",
    "PLE",
    "Q",
    "W",
    "YTT",
    "RET",
    "SIM",
    "ASYNC",
]
exclude = [
    ".git",
    ".venv",
    ".idea",
    ".tests",
    ".cache",
    "build",
    "dist",
    "scripts",
    "migrations",
]

[tool.ruff.per-file-ignores]
"bot/handlers/chatting.py" = ["E501"]
"bot/keyboards/inline/inline.py" = ["E501"]

[tool.mypy]
plugins = [
    "sqlalchemy.ext.mypy.plugin",
    "pydantic.mypy"
]
exclude = [
    ".git",
    ".venv",
    ".idea",
    ".tests",
    ".cache",
    "build",
    "dist",
    "scripts",
    "migrations",
]

[[tool.mypy.overrides]]
module = ["bot.handlers.*"]
strict_optional = false
warn_return_any = false
